--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="dark_green">#004A07</color>
+    <color name="green">#007C0C</color>
+    <color name="light_gray">#E4E4E4</color>
 </resources>
